<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TriviaAPP</string>ç
    <string name="game_activity_name">Trivia</string>
    <string name="historial_activity_name">Historical</string>

    <!-- TRADUCCION: INGLES -->
    <!-- CATEGORY ROWS -->
    <string name="row_maxPuntuation">Max puntuation: </string>
    <string name="row_totalHit">Total hit: </string>

    <string name="row_puntuation">Puntuation: </string>
    <string name="row_hit">Hits: </string>
    <string name="row_category">Category: </string>
    <string name="row_date">Date: </string>
    <string name="row_game">Game #<xliff:g name="id" example="0">%s</xliff:g></string>

    <!-- Nombre de las categorias -->
    <string name="categoria1">Any category</string>
    <string name="categoria2">General Knowledge</string>
    <string name="categoria3">Entertainment: Books</string>
    <string name="categoria4">Entertainment: Films</string>
    <string name="categoria5">Entertainment: Musics</string>
    <string name="categoria6">Entertainment: Musicals and Theatres</string>
    <string name="categoria7">Entertainment: Television</string>
    <string name="categoria8">Entertainment: Video Games</string>
    <string name="categoria9">Entertainment: Board Games</string>
    <string name="categoria10">Science and Nature</string>
    <string name="categoria11">Science: Computers</string>
    <string name="categoria12">Science: Mathematics</string>
    <string name="categoria13">Mythology</string>
    <string name="categoria14">Sports</string>
    <string name="categoria15">Geography</string>
    <string name="categoria16">History</string>
    <string name="categoria17">Politics</string>
    <string name="categoria18">Art</string>
    <string name="categoria19">Celebrities</string>
    <string name="categoria20">Animals</string>
    <string name="categoria21">Vehicles</string>
    <string name="categoria22">Entertainment: Comics</string>
    <string name="categoria23">Science: Gadgets</string>
    <string name="categoria24">Entertainment: Japanese Anime and Manga</string>
    <string name="categoria25">Entertainment: Cartoon and Animations</string>

    <!-- Versión corta del nombre de las categorias (Max: 10 caracteres) -->
    <string name="categoria1short">Any category</string>
    <string name="categoria2short">General</string>
    <string name="categoria3short">Books</string>
    <string name="categoria4short">Films</string>
    <string name="categoria5short">Musics</string>
    <string name="categoria6short">Musicals</string>
    <string name="categoria7short">Television</string>
    <string name="categoria8short">Videogames</string>
    <string name="categoria9short">Boardgames</string>
    <string name="categoria10short">Nature</string>
    <string name="categoria11short">Computers</string>
    <string name="categoria12short">Maths</string>
    <string name="categoria13short">Mythology</string>
    <string name="categoria14short">Sports</string>
    <string name="categoria15short">Geography</string>
    <string name="categoria16short">History</string>
    <string name="categoria17short">Politics</string>
    <string name="categoria18short">Art</string>
    <string name="categoria19short">Celebrities</string>
    <string name="categoria20short">Animals</string>
    <string name="categoria21short">Vehicles</string>
    <string name="categoria22short">Comics</string>
    <string name="categoria23short">Gadgets</string>
    <string name="categoria24short">Anime</string>
    <string name="categoria25short">Cartoons</string>

    <!-- Nombre de las dificultades -->
    <string name="dificultadFacil">Easy</string>
    <string name="dificultadMedium">Medium</string>
    <string name="dificultadHard">Hard</string>
    <string name="dificultadAny">Any</string>

    <!-- INFORMACION ACERCA DE LOS MODOS DE JUEGOS -->
    <string name="modoJuegoTitulo1">Easy questions</string>
    <string name="modoJuegoTitulo2">Easy questions</string>
    <string name="modoJuegoTitulo3">Medium questions</string>
    <string name="modoJuegoTitulo4">Medium questions</string>
    <string name="modoJuegoTitulo5">Hard questions</string>
    <string name="modoJuegoTitulo6">Hard questions</string>
    <string name="modoJuegoTitulo7">Nightmare questions</string>
    <string name="modoJuegoTitulo8">Nightmare questions</string>

    <string name="modoJuegoDescripcion1">10 random easy questions</string>
    <string name="modoJuegoDescripcion2">20 random easy questions</string>
    <string name="modoJuegoDescripcion3">10 random medium questions</string>
    <string name="modoJuegoDescripcion4">20 random medium questions</string>
    <string name="modoJuegoDescripcion5">10 random hard questions</string>
    <string name="modoJuegoDescripcion6">20 random hard questions</string>
    <string name="modoJuegoDescripcion7">10 random nightmare questions</string>
    <string name="modoJuegoDescripcion8">20 random nightmare questions</string>

    <string name="modoJuegoBlocqueado">Complete the last mode!</string>

    <string name="tituloHistorial">Game</string>

    <!-- HISTORIAL -->
    <string name="historialPregunta">Question: </string>
    <string name="historialYourAnswer">Your answer: </string>
    <string name="historialCorrectAnswer">Correct answer: </string>
    <string name="historialPuntuation">Puntuation: </string>

    <!-- DENTRO DEL JUEGO -->
    <string name="juegoPuntosTotales">Your points: </string>
    <string name="juegoCategoria">Category: </string>
    <string name="juegoDificultad">Difficulty: </string>
    <string name="juegoPuntosPregunta">" points"</string>

    <!-- COMODINES -->
    <string name="usarComodin">You cant use this comodin</string>
    <string name="llamadaSeguro">Im sure the answer is </string>
    <string name="llamadaCreo">I think the answer is </string>

    <!-- FIN DE PARTIDA -->
    <string name="juegoFinalAcertadas">Correct answers: </string>
    <string name="juegoFinalPuntos">Total points: </string>
    <string name="juegoFinalVolver">BACK TO MENU</string>

    <!-- AVISOS Y ERRORES -->
    <string name="no_internet_connection">No internet connection!</string>
</resources>
