<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="4dp"
    android:padding="12dp"
    android:background="@layout/borde_categoria"
    >

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/row_game"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorStrongFont"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_puntuation"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorStrongFont"
                />
            <TextView
                android:id="@+id/textViewPuntuacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"
                android:textColor="@color/colorWeakFont"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_category"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorStrongFont"
                />
            <TextView
                android:id="@+id/textViewCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Undefined"
                android:textSize="16sp"
                android:textColor="@color/colorWeakFont"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_hit"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorStrongFont"
                />
            <TextView
                android:id="@+id/textViewAcertadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0/5"
                android:textSize="16sp"
                android:textColor="@color/colorWeakFont"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_date"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorStrongFont"
                />
            <TextView
                android:id="@+id/textViewFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/1/1970"
                android:textSize="16sp"
                android:textColor="@color/colorWeakFont"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>