<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentJuegoPregunta"
    android:id="@+id/frameLayoutContenido"
    android:background="@drawable/fondo_pregunta"
    >

    <LinearLayout
        android:id="@+id/fragmentLinearPregunta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juegoPuntosTotales"
                android:textColor="@color/colorPreguntaWeak"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/fragmentPreguntaTotalPuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPregunta"
                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/fragmentPreguntaEnunciado"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="Which company developed the videogame Borderland?"
            android:textColor="@color/colorPregunta"
            android:autoSizeTextType="uniform"
            android:textAlignment="gravity"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="32sp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp">
            <TextView
                android:id="@+id/fragmentPreguntaPuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:paddingRight="4dp"
                android:textColor="@color/colorPregunta"
                android:textSize="24sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juegoPuntosPregunta"
                android:textColor="@color/colorPregunta"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/juegoCategoria"
                    android:textColor="@color/colorPreguntaWeak"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/fragmentPreguntaCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Videojuegos"
                    android:textColor="@color/colorPregunta"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="right"
                android:padding="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/juegoDificultad"
                    android:textColor="@color/colorPreguntaWeak"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/fragmentPreguntaDificultad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fácil"
                    android:textColor="@color/colorPregunta"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>